// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputAdornment /> ref should work 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> should render Box props correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
  margin-top: 20px;
}

<div
  class="poodle-box poodle-input-adornment c0"
  id="id"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> should render InputAdornment correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> should render InputAdornment position end correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-right: 8px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> theming should extend styles in global 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> theming should extend styles in local 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-input-adornment c0"
>
  InputAdornment
</div>
`;

exports[`<InputAdornment /> theming should render with default props correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #282828;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 400;
  line-height: 125%;
  padding-left: 8px;
}

<div
  class="poodle-box poodle-input-adornment hello c0"
  id="id"
>
  InputAdornment
</div>
`;
